# stellarpulse

./: .gitignore  README.md  options.json  package.json
contract/: Cargo.toml  deploy.sh
contract/src/: lib.rs
frontend/: .env.local.example  next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ContractBanner.tsx  Header.tsx  LiveIndicator.tsx  PollCard.tsx  PollSkeleton.tsx  ResultsChart.tsx  StarField.tsx  Toast.tsx  VoteOption.tsx
frontend/src/hooks/: usePoll.ts  useWallet.ts
frontend/src/lib/: stellar.ts  wallet.ts
frontend/src/types/: index.ts
